--- a/Projects/yt premium/style.css
+++ b/Projects/yt premium/style.css
@@ -2,6 +2,9 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Roboto,arial,sans-serif;
+    overflow-x: hidden;
+
 }
 
 .container{
@@ -9,7 +12,9 @@
     height: 100vh;
 }
 
-.navbar{
+.navbar{  
+    position: sticky;
+    top: 0;
     background-color: black;
     display: flex;
     justify-content: space-between;
@@ -41,6 +46,7 @@
     border: 1px solid #303030;
     border-bottom-left-radius:20px ;
     border-top-left-radius: 20px;
+    color: white;
     
 
 }
@@ -61,4 +67,252 @@
 .rightnav img:nth-child(3){
     width: 30px;
     border-radius: 50%;
+}
+
+.ytpremium{
+    font-family: Roboto,Arial,sans-serif;
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content:center;
+    align-items: center;
+    gap: 50px;
+    
+}
+
+.ytdesc>h2{
+    font-family: Roboto ,arial,sans-serif;
+    text-align: center;
+    font-weight: lighter;
+    font-size: 32px;
+    line-height: 40px;
+
+}
+.ytpremiumdetials{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+
+}
+.ytpremiumdetials>button{
+    padding: 10px 15px;
+    border-radius: 20px;
+    width: 35%;
+    border: none;
+    font-weight: 60;
+    background-color: #3ea6ff;
+}
+
+.ytpremiumdetials p:nth-child(2){
+    font-size: 25px;
+    font-weight:lighter;
+}
+.annual{
+     color: #76c4ff;
+}
+.ytpremiumdetials p:nth-child(4){
+    color: #76c4ff;
+}
+.features{
+    background-color: black;
+    color: white;
+    display: flex;
+    height: 52%;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    gap: 10px;
+}
+.features div:nth-child(1),.features div:nth-child(2),.features div:nth-child(3){
+    
+    width: 20%;
+    height: 60%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    
+}
+
+.features div:nth-child(1) >p,.features div:nth-child(2)>p,.features div:nth-child(3)>p{
+    font-size: 15px;
+    font-weight: 600;
+    color: rgba(226, 226, 226, 0.711);
+    overflow-y:hidden;
+}
+.features div:nth-child(1) >h2{
+    overflow-y: hidden;
+}
+
+.bg1{
+    background-image: url(assets/bg1.jpeg);
+    height: 60%;
+    background-size: cover;
+}
+.bg1>div>h2{
+    font-size: 2.8rem;
+    font-weight: lighter;
+    color: white;
+}
+
+.bg1>div{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 170px 0px 0px 750px;
+}
+.bg1>div>p{
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 30px;
+    color: rgba(255, 255, 255, 0.554);
+}
+
+
+
+.bg2{
+    background-image: url(assets/bg2.jpeg);
+    height: 60%;
+    background-size: cover;
+}
+.bg2>div>h2{
+    font-size: 2.8rem;
+    font-weight: lighter;
+    color: white;
+}
+
+.bg2>div{
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    gap: 10px;
+    padding: 170px 0px 0px 250px;
+}
+.bg2>div>p{
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 30px;
+    color: rgba(255, 255, 255, 0.554);
+}
+
+
+
+.bg3{
+    background-image: url(assets/bg3.jpeg);
+    height: 60%;
+    background-size: cover;
+}
+.bg3>div>h2{
+    font-size: 2.8rem;
+    font-weight: lighter;
+    color: white;
+}
+
+.bg3>div{
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    gap: 10px;
+    padding: 170px 0px 0px 750px;
+}
+.bg3>div>p{
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 30px;
+    color: rgba(255, 255, 255, 0.554);
+}
+
+
+.bg4{
+    background-image: url(assets/bg4.jpeg);
+    height: 60%;
+    background-size: cover;
+}
+.bg4>div>h2{
+    font-size: 2.8rem;
+    font-weight: lighter;
+    color: white;
+}
+
+.bg4>div{
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    gap: 10px;
+    padding: 170px 0px 0px 250px;
+}
+.bg4>div>p{
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 30px;
+    color: rgba(255, 255, 255, 0.554);
+}
+
+
+.faqs{
+    width: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 61%;
+    gap: 40px;
+    background-color: black;
+    color: white;
+}
+
+.faqDetail{
+    width: 45%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    
+}
+
+.faqDetail>p{
+    font-size: 30px;
+    font-weight: lighter;
+    gap: 20px;
+}
+.drop{
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+    font-size: 18px;
+    font-weight: 700;
+}
+
+hr{
+    opacity: 0.4;
+}
+.helpCenter>p{
+    font-size: 20px;
+    font-weight: lighter;
+    padding-right: 130px;
+}
+.helpCenter>p>span{
+    color: #3ebaff;
+}
+
+*::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #F5F5F5;
+}
+
+*::-webkit-scrollbar
+{
+	width: 12px;
+	background-color: #F5F5F5;
+}
+
+*::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #D62929;
 }
